mOOL_parser.output
   0  $accept : %entry% $end

   1  input : class_main class_decl_list

   2  class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE method_main CBRACE

   3  inheritence :
   4              | EXTENDS_KWORD CLASS_IDENTIFIER

   5  class_decl : CLASS_KWORD CLASS_IDENTIFIER inheritence OBRACE varmth_varmth_decl_list method_decl_list CBRACE

   6  class_decl_list :
   7                  | non_zero_class_decl_list

   8  non_zero_class_decl_list : class_decl
   9                           | non_zero_class_decl_list class_decl

  10  modifier :
  11           | PRIVATE_KWORD

  12  method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE

  13  var_id_rule : VAR_IDENTIFIER

  14  method_decl : type_KWORD var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE
  15              | modifier type_KWORD var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE

  16  method_decl_list :
  17                   | non_zero_method_decl_list

  18  non_zero_method_decl_list : method_decl
  19                            | non_zero_method_decl_list method_decl

  20  type_KWORD : BOOL_KWORD
  21             | INT_KWORD
  22             | STRING_KWORD
  23             | VOID_KWORD
  24             | CLASS_IDENTIFIER

  25  mthd_param_list :
  26                  | non_zero_mthd_param_list

  27  non_zero_mthd_param_list : type_KWORD var_id_rule
  28                           | non_zero_mthd_param_list COMMA type_KWORD var_id_rule

  29  var_decl_stmt_list :
  30                     | non_zero_var_decl_stmt_list

  31  non_zero_var_decl_stmt_list : type_KWORD var_id_rule SEMICOLON
  32                              | non_zero_var_decl_stmt_list type_KWORD var_id_rule SEMICOLON

  33  varmth_varmth_decl_list :
  34                          | non_zero_varmth_decl_list

  35  non_zero_varmth_decl_list : type_KWORD var_id_rule SEMICOLON non_zero_varmth_decl_list
  36                            | modifier type_KWORD var_id_rule SEMICOLON non_zero_varmth_decl_list
  37                            | method_decl
  38                            | type_KWORD var_id_rule SEMICOLON

  39  stmt : RETURN_KWORD exp SEMICOLON
  40       | RETURN_KWORD SEMICOLON
  41       | IF_KWORD OPAREN exp CPAREN OBRACE non_zero_stmt_list CBRACE ELSE_KWORD OBRACE non_zero_stmt_list CBRACE
  42       | WHILE_KWORD OPAREN exp CPAREN OBRACE non_zero_stmt_list CBRACE
  43       | var_id_rule ASSIGN exp SEMICOLON
  44       | READ_KWORD OPAREN var_id_rule CPAREN SEMICOLON
  45       | PRINT_KWORD OPAREN exp CPAREN SEMICOLON
  46       | atom DOT var_id_rule ASSIGN exp SEMICOLON
  47       | atom OPAREN exp_list CPAREN SEMICOLON

  48  stmt_list :
  49            | non_zero_stmt_list

  50  non_zero_stmt_list : stmt
  51                     | stmt non_zero_stmt_list

  52  cast : OPAREN CLASS_IDENTIFIER CPAREN

  53  exp : exp OR exp
  54      | exp AND exp
  55      | exp EQ exp
  56      | exp NEQ exp
  57      | exp GRE exp
  58      | exp GEQ exp
  59      | exp LE exp
  60      | exp LEQ exp
  61      | exp PLUS exp
  62      | exp MINUS exp
  63      | exp MULTIPLY exp
  64      | exp DIVIDE exp
  65      | NEG exp
  66      | MINUS exp
  67      | atom

  68  atom : atom DOT var_id_rule
  69       | STRING_LITERAL
  70       | INTEGER_LITERAL
  71       | TRUE_KWORD
  72       | FALSE_KWORD
  73       | atom OPAREN exp_list CPAREN
  74       | THIS_KWORD
  75       | SUPER_KWORD
  76       | NULL_KWORD
  77       | var_id_rule
  78       | NEW_KWORD CLASS_IDENTIFIER OPAREN CPAREN
  79       | OPAREN type_KWORD CPAREN atom
  80       | OPAREN exp CPAREN

  81  exp_list :
  82           | non_zero_exp_list

  83  non_zero_exp_list : exp
  84                    | non_zero_exp_list COMMA exp

  85  %entry% : '\001' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . input  (85)

	CLASS_KWORD  shift 3
	.  error

	input  goto 4
	class_main  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	class_main : CLASS_KWORD . CLASS_IDENTIFIER OBRACE method_main CBRACE  (2)

	CLASS_IDENTIFIER  shift 6
	.  error


state 4
	%entry% : '\001' input .  (85)

	.  reduce 85


state 5
	input : class_main . class_decl_list  (1)
	class_decl_list : .  (6)

	CLASS_KWORD  shift 7
	$end  reduce 6

	class_decl_list  goto 8
	class_decl  goto 9
	non_zero_class_decl_list  goto 10


state 6
	class_main : CLASS_KWORD CLASS_IDENTIFIER . OBRACE method_main CBRACE  (2)

	OBRACE  shift 11
	.  error


state 7
	class_decl : CLASS_KWORD . CLASS_IDENTIFIER inheritence OBRACE varmth_varmth_decl_list method_decl_list CBRACE  (5)

	CLASS_IDENTIFIER  shift 12
	.  error


state 8
	input : class_main class_decl_list .  (1)

	.  reduce 1


state 9
	non_zero_class_decl_list : class_decl .  (8)

	.  reduce 8


state 10
	class_decl_list : non_zero_class_decl_list .  (7)
	non_zero_class_decl_list : non_zero_class_decl_list . class_decl  (9)

	CLASS_KWORD  shift 7
	$end  reduce 7

	class_decl  goto 13


state 11
	class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE . method_main CBRACE  (2)

	VOID_KWORD  shift 14
	.  error

	method_main  goto 15


state 12
	class_decl : CLASS_KWORD CLASS_IDENTIFIER . inheritence OBRACE varmth_varmth_decl_list method_decl_list CBRACE  (5)
	inheritence : .  (3)

	EXTENDS_KWORD  shift 16
	OBRACE  reduce 3

	inheritence  goto 17


state 13
	non_zero_class_decl_list : non_zero_class_decl_list class_decl .  (9)

	.  reduce 9


state 14
	method_main : VOID_KWORD . MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (12)

	MAIN_KWORD  shift 18
	.  error


state 15
	class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE method_main . CBRACE  (2)

	CBRACE  shift 19
	.  error


state 16
	inheritence : EXTENDS_KWORD . CLASS_IDENTIFIER  (4)

	CLASS_IDENTIFIER  shift 20
	.  error


state 17
	class_decl : CLASS_KWORD CLASS_IDENTIFIER inheritence . OBRACE varmth_varmth_decl_list method_decl_list CBRACE  (5)

	OBRACE  shift 21
	.  error


state 18
	method_main : VOID_KWORD MAIN_KWORD . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (12)

	OPAREN  shift 22
	.  error


state 19
	class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE method_main CBRACE .  (2)

	.  reduce 2


state 20
	inheritence : EXTENDS_KWORD CLASS_IDENTIFIER .  (4)

	.  reduce 4


21: shift/reduce conflict (shift 23, reduce 10) on INT_KWORD
21: shift/reduce conflict (shift 23, reduce 33) on INT_KWORD
21: shift/reduce conflict (shift 24, reduce 10) on BOOL_KWORD
21: shift/reduce conflict (shift 24, reduce 33) on BOOL_KWORD
21: shift/reduce conflict (shift 25, reduce 10) on STRING_KWORD
21: shift/reduce conflict (shift 25, reduce 33) on STRING_KWORD
21: shift/reduce conflict (shift 26, reduce 10) on VOID_KWORD
21: shift/reduce conflict (shift 26, reduce 33) on VOID_KWORD
21: shift/reduce conflict (shift 27, reduce 33) on PRIVATE_KWORD
21: shift/reduce conflict (shift 28, reduce 10) on CLASS_IDENTIFIER
21: shift/reduce conflict (shift 28, reduce 33) on CLASS_IDENTIFIER
state 21
	class_decl : CLASS_KWORD CLASS_IDENTIFIER inheritence OBRACE . varmth_varmth_decl_list method_decl_list CBRACE  (5)
	modifier : .  (10)
	varmth_varmth_decl_list : .  (33)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	PRIVATE_KWORD  shift 27
	CLASS_IDENTIFIER  shift 28
	CBRACE  reduce 33

	varmth_varmth_decl_list  goto 29
	modifier  goto 30
	method_decl  goto 31
	type_KWORD  goto 32
	non_zero_varmth_decl_list  goto 33


state 22
	method_main : VOID_KWORD MAIN_KWORD OPAREN . mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (12)
	mthd_param_list : .  (25)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	CLASS_IDENTIFIER  shift 28
	CPAREN  reduce 25

	mthd_param_list  goto 34
	type_KWORD  goto 35
	non_zero_mthd_param_list  goto 36


state 23
	type_KWORD : INT_KWORD .  (21)

	.  reduce 21


state 24
	type_KWORD : BOOL_KWORD .  (20)

	.  reduce 20


state 25
	type_KWORD : STRING_KWORD .  (22)

	.  reduce 22


state 26
	type_KWORD : VOID_KWORD .  (23)

	.  reduce 23


state 27
	modifier : PRIVATE_KWORD .  (11)

	.  reduce 11


state 28
	type_KWORD : CLASS_IDENTIFIER .  (24)

	.  reduce 24


29: shift/reduce conflict (shift 23, reduce 10) on INT_KWORD
29: shift/reduce conflict (shift 24, reduce 10) on BOOL_KWORD
29: shift/reduce conflict (shift 25, reduce 10) on STRING_KWORD
29: shift/reduce conflict (shift 26, reduce 10) on VOID_KWORD
29: shift/reduce conflict (shift 28, reduce 10) on CLASS_IDENTIFIER
state 29
	class_decl : CLASS_KWORD CLASS_IDENTIFIER inheritence OBRACE varmth_varmth_decl_list . method_decl_list CBRACE  (5)
	modifier : .  (10)
	method_decl_list : .  (16)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	PRIVATE_KWORD  shift 27
	CLASS_IDENTIFIER  shift 28
	CBRACE  reduce 16

	method_decl_list  goto 37
	modifier  goto 38
	method_decl  goto 39
	type_KWORD  goto 40
	non_zero_method_decl_list  goto 41


state 30
	method_decl : modifier . type_KWORD var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (15)
	non_zero_varmth_decl_list : modifier . type_KWORD var_id_rule SEMICOLON non_zero_varmth_decl_list  (36)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	CLASS_IDENTIFIER  shift 28
	.  error

	type_KWORD  goto 42


state 31
	non_zero_varmth_decl_list : method_decl .  (37)

	.  reduce 37


state 32
	method_decl : type_KWORD . var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (14)
	non_zero_varmth_decl_list : type_KWORD . var_id_rule SEMICOLON non_zero_varmth_decl_list  (35)
	non_zero_varmth_decl_list : type_KWORD . var_id_rule SEMICOLON  (38)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 44


state 33
	varmth_varmth_decl_list : non_zero_varmth_decl_list .  (34)

	.  reduce 34


state 34
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list . CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (12)

	CPAREN  shift 45
	.  error


state 35
	non_zero_mthd_param_list : type_KWORD . var_id_rule  (27)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 46


state 36
	mthd_param_list : non_zero_mthd_param_list .  (26)
	non_zero_mthd_param_list : non_zero_mthd_param_list . COMMA type_KWORD var_id_rule  (28)

	COMMA  shift 47
	CPAREN  reduce 26


state 37
	class_decl : CLASS_KWORD CLASS_IDENTIFIER inheritence OBRACE varmth_varmth_decl_list method_decl_list . CBRACE  (5)

	CBRACE  shift 48
	.  error


state 38
	method_decl : modifier . type_KWORD var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (15)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	CLASS_IDENTIFIER  shift 28
	.  error

	type_KWORD  goto 49


state 39
	non_zero_method_decl_list : method_decl .  (18)

	.  reduce 18


state 40
	method_decl : type_KWORD . var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (14)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 50


41: shift/reduce conflict (shift 23, reduce 10) on INT_KWORD
41: shift/reduce conflict (shift 24, reduce 10) on BOOL_KWORD
41: shift/reduce conflict (shift 25, reduce 10) on STRING_KWORD
41: shift/reduce conflict (shift 26, reduce 10) on VOID_KWORD
41: shift/reduce conflict (shift 28, reduce 10) on CLASS_IDENTIFIER
state 41
	method_decl_list : non_zero_method_decl_list .  (17)
	non_zero_method_decl_list : non_zero_method_decl_list . method_decl  (19)
	modifier : .  (10)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	PRIVATE_KWORD  shift 27
	CLASS_IDENTIFIER  shift 28
	CBRACE  reduce 17

	modifier  goto 38
	method_decl  goto 51
	type_KWORD  goto 40


state 42
	method_decl : modifier type_KWORD . var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (15)
	non_zero_varmth_decl_list : modifier type_KWORD . var_id_rule SEMICOLON non_zero_varmth_decl_list  (36)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 52


state 43
	var_id_rule : VAR_IDENTIFIER .  (13)

	.  reduce 13


state 44
	method_decl : type_KWORD var_id_rule . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (14)
	non_zero_varmth_decl_list : type_KWORD var_id_rule . SEMICOLON non_zero_varmth_decl_list  (35)
	non_zero_varmth_decl_list : type_KWORD var_id_rule . SEMICOLON  (38)

	OPAREN  shift 53
	SEMICOLON  shift 54
	.  error


state 45
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN . OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (12)

	OBRACE  shift 55
	.  error


state 46
	non_zero_mthd_param_list : type_KWORD var_id_rule .  (27)

	.  reduce 27


state 47
	non_zero_mthd_param_list : non_zero_mthd_param_list COMMA . type_KWORD var_id_rule  (28)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	CLASS_IDENTIFIER  shift 28
	.  error

	type_KWORD  goto 56


state 48
	class_decl : CLASS_KWORD CLASS_IDENTIFIER inheritence OBRACE varmth_varmth_decl_list method_decl_list CBRACE .  (5)

	.  reduce 5


state 49
	method_decl : modifier type_KWORD . var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (15)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 57


state 50
	method_decl : type_KWORD var_id_rule . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (14)

	OPAREN  shift 53
	.  error


state 51
	non_zero_method_decl_list : non_zero_method_decl_list method_decl .  (19)

	.  reduce 19


state 52
	method_decl : modifier type_KWORD var_id_rule . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (15)
	non_zero_varmth_decl_list : modifier type_KWORD var_id_rule . SEMICOLON non_zero_varmth_decl_list  (36)

	OPAREN  shift 58
	SEMICOLON  shift 59
	.  error


state 53
	method_decl : type_KWORD var_id_rule OPAREN . mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (14)
	mthd_param_list : .  (25)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	CLASS_IDENTIFIER  shift 28
	CPAREN  reduce 25

	mthd_param_list  goto 60
	type_KWORD  goto 35
	non_zero_mthd_param_list  goto 36


54: shift/reduce conflict (shift 23, reduce 10) on INT_KWORD
54: shift/reduce conflict (shift 23, reduce 38) on INT_KWORD
54: shift/reduce conflict (shift 24, reduce 10) on BOOL_KWORD
54: shift/reduce conflict (shift 24, reduce 38) on BOOL_KWORD
54: shift/reduce conflict (shift 25, reduce 10) on STRING_KWORD
54: shift/reduce conflict (shift 25, reduce 38) on STRING_KWORD
54: shift/reduce conflict (shift 26, reduce 10) on VOID_KWORD
54: shift/reduce conflict (shift 26, reduce 38) on VOID_KWORD
54: shift/reduce conflict (shift 27, reduce 38) on PRIVATE_KWORD
54: shift/reduce conflict (shift 28, reduce 10) on CLASS_IDENTIFIER
54: shift/reduce conflict (shift 28, reduce 38) on CLASS_IDENTIFIER
state 54
	non_zero_varmth_decl_list : type_KWORD var_id_rule SEMICOLON . non_zero_varmth_decl_list  (35)
	non_zero_varmth_decl_list : type_KWORD var_id_rule SEMICOLON .  (38)
	modifier : .  (10)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	PRIVATE_KWORD  shift 27
	CLASS_IDENTIFIER  shift 28
	CBRACE  reduce 38

	modifier  goto 30
	method_decl  goto 31
	type_KWORD  goto 32
	non_zero_varmth_decl_list  goto 61


state 55
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE . var_decl_stmt_list non_zero_stmt_list CBRACE  (12)
	var_decl_stmt_list : .  (29)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	CLASS_IDENTIFIER  shift 28
	TRUE_KWORD  reduce 29
	FALSE_KWORD  reduce 29
	WHILE_KWORD  reduce 29
	IF_KWORD  reduce 29
	RETURN_KWORD  reduce 29
	THIS_KWORD  reduce 29
	SUPER_KWORD  reduce 29
	NULL_KWORD  reduce 29
	NEW_KWORD  reduce 29
	READ_KWORD  reduce 29
	PRINT_KWORD  reduce 29
	INTEGER_LITERAL  reduce 29
	STRING_LITERAL  reduce 29
	VAR_IDENTIFIER  reduce 29
	OPAREN  reduce 29

	var_decl_stmt_list  goto 62
	type_KWORD  goto 63
	non_zero_var_decl_stmt_list  goto 64


state 56
	non_zero_mthd_param_list : non_zero_mthd_param_list COMMA type_KWORD . var_id_rule  (28)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 65


state 57
	method_decl : modifier type_KWORD var_id_rule . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (15)

	OPAREN  shift 58
	.  error


state 58
	method_decl : modifier type_KWORD var_id_rule OPAREN . mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (15)
	mthd_param_list : .  (25)

	INT_KWORD  shift 23
	BOOL_KWORD  shift 24
	STRING_KWORD  shift 25
	VOID_KWORD  shift 26
	CLASS_IDENTIFIER  shift 28
	CPAREN  reduce 25

	mthd_param_list  goto 66
	type_KWORD  goto 35
	non_zero_mthd_param_list  goto 36

